# cosinus

./: .zenodo.json  CONTRIBUTORS.md  FORMS.md  NOTES.md  README.md  TRANSCRIPTION.md  lexibank_cosinus.py  lexibank_numeralpacs.py  metadata.json  setup.py
.github/: pull_request_template.md
.github/workflows/: cldf-validation.yml
cldf/: .transcription-report.json  README.md  cldf-metadata.json  forms.csv  languages.csv  lingpy-rcParams.json  parameters.csv  requirements.txt  sources.bib
draft/: draft.md  pandocit.sh  sources.bib  tmp.md
etc/: concepts.csv  languages.csv
examples/: README.md  morfessor_demo.py  morseg_eval.csv  morseg_eval.py  plot_vocab_size.py  requirements.txt  stats.csv  stats.py  subword_eval.csv  subword_eval.py
morseg/: setup.cfg
morseg/src/morseg/algorithms/: tokenizer.py
morseg/src/morseg/datastruct/: __init__.py  pct.py  trie.py
morseg/src/morseg/utils/: __init__.py  eval.py  list_utils.py  wrappers.py
paper/: Length-estimator.xlsx  letter_from_editors.md
raw/: assa1263.tsv  czech.tsv  german-annotated.tsv  german.tsv  googleuninum.tsv  hind1269.tsv  huallaga-quechua.tsv  khoi1251.tsv  lamj1247.tsv  maky1236.tsv  malt1254.tsv  maltese.tsv  mand1415-2024-07-2814-22.tsv  mand1415.tsv  mong1332.tsv  russian.tsv  sanskrit.tsv  sanskrit2-2024-07-2821-50.tsv  sanskrit2.tsv  shan1293.tsv  sources.bib
raw/done/: achi1257.tsv  amha1245.tsv  assa1263.tsv  assy1241.tsv  ayma1253.tsv  aymara - ayma1253.tsv  aymara.tsv  cavi1250.tsv  cavinena.tsv  cavineña - cavi1250.tsv  chey1247.tsv  chiq1248.tsv  chiquitano - chiq1248.tsv  clas1252.tsv  czech.tsv  dhiv1236.tsv  east2295.tsv  finn1318.tsv  french.tsv  geez1241.tsv  german.tsv  hebr1245.tsv  hind1269.tsv  huallaga-quechua.tsv  hung1274.tsv  iraq1241.tsv  irish.tsv  italian.tsv  kala1372.tsv  kash1277.tsv  khoi1251.tsv  kumz1235.tsv  lamb1269.tsv  lamj1247.tsv  latin.tsv  lish1247.tsv  maky1236.tsv  maltese.tsv  mand1415.tsv  mand1476.tsv  (+27 more)
raw/done-40/: hind1269.tsv  maky1236.tsv  mong1332.tsv
raw/googleuninum/: bulgarian.tsv  (+1 more)
scripts/: diversity.py
(+24 files in other folders)
